feat: update user API responses to use new pagination structure and enhance CORS configuration for better origin handling